--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install: pip install -r requirements.txt
 script:
     - echo "python version $(python --version) running"
     - echo "pip version $(pip --version) running"
-    - make check test
+    - make test
